# stable_structs

./: .env  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/client/: Cargo.toml
src/client/src/: agent.rs  main.rs
src/client/src/agent/: generic_identity.rs
src/dfinity_stables/: Cargo.toml  dfinity_stables.did
src/dfinity_stables/src/: lib.rs
src/did/: Cargo.toml
src/did/src/: lib.rs
src/stable_structs/: Cargo.toml
src/stable_structs/src/: lib.rs
src/stable_structs_backend/: Cargo.toml
src/stable_structs_frontend/src/: index.html  index.js
