[package]
name = "dfinity_stables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
did = { path = "../did" }
ic-cdk = "0.8.1"
ic-cdk-macros = "0.6.0"
ic-stable-structures = "0.5.4"
